src/objects/Turn_Over_Rent__c.object
<CustomObject>
    <description>Object used to store Turn-Over Rent information related to Retail Leases.</description>
    <fields>
        <fullName>BreakPoint_Frequency__c</fullName>
        <label>BreakPoint Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <label>Annually</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Monthly</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Natural_Breakpoint_Percentage__c</fullName>
        <label>Natural Breakpoint Percentage</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Natural_Breakpoint__c</fullName>
        <label>Natural Breakpoint</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>0</fullName>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Overage_From_Date__c</fullName>
        <label>Overage From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Overage_Offset_Account_Charge_Code_1__c</fullName>
        <label>Overage Offset Account Charge Code 1</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overage_Offset_Account_Charge_Code_2__c</fullName>
        <label>Overage Offset Account Charge Code 2</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overage_Offset_Account_Charge_Code_3__c</fullName>
        <label>Overage Offset Account Charge Code 3</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overage_Offset_Type__c</fullName>
        <label>Overage Offset Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Fixed Offset</label>
                </value>
                <value>
                    <fullName>0</fullName>
                    <label>Offset Accounts</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Overage_To_Date__c</fullName>
        <label>Overage To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Turn Over Rents</relationshipLabel>
        <relationshipName>Turn_Over_Rents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Retail_Billing_Frequency__c</fullName>
        <label>Retail Billing Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>4</fullName>
                    <label>Annually</label>
                </value>
                <value>
                    <fullName>0</fullName>
                    <label>Monthly</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Retail_End_Date__c</fullName>
        <label>Retail End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Retail_Start_Date__c</fullName>
        <label>Retail Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_End_Of_Year__c</fullName>
        <label>Sales End Of Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>January</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Febrary</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>March</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>April</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>May</label>
                </value>
                <value>
                    <fullName>6</fullName>
                    <label>June</label>
                </value>
                <value>
                    <fullName>7</fullName>
                    <label>July</label>
                </value>
                <value>
                    <fullName>8</fullName>
                    <label>August</label>
                </value>
                <value>
                    <fullName>9</fullName>
                    <label>September</label>
                </value>
                <value>
                    <fullName>10</fullName>
                    <label>October</label>
                </value>
                <value>
                    <fullName>11</fullName>
                    <label>November</label>
                </value>
                <value>
                    <fullName>12</fullName>
                    <label>December</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Report_Frequency__c</fullName>
        <label>Sales Report Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>4</fullName>
                    <label>Annually</label>
                </value>
                <value>
                    <fullName>0</fullName>
                    <label>Monthly</label>
                </value>
                <value>
                    <fullName>1</fullName>
                    <label>Quarterly</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>SemiAnnually</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Type__c</fullName>
        <description>Picklist values needs to be added</description>
        <label>Sales Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accessories &amp; Footwear</fullName>
                </value>
                <value>
                    <fullName>Artists-Artisans</fullName>
                </value>
                <value>
                    <fullName>F&amp;B, Cold Kitchen</fullName>
                </value>
                <value>
                    <fullName>F&amp;B, Hot Kitchen</fullName>
                </value>
                <value>
                    <fullName>F&amp;B, Licensed</fullName>
                </value>
                <value>
                    <fullName>Fashion</fullName>
                </value>
                <value>
                    <fullName>Food-Grocery</fullName>
                </value>
                <value>
                    <fullName>Gym</fullName>
                </value>
                <value>
                    <fullName>Health &amp; Beauty</fullName>
                </value>
                <value>
                    <fullName>Home &amp; Electricals</fullName>
                </value>
                <value>
                    <fullName>Home Accessories</fullName>
                </value>
                <value>
                    <fullName>Leisure</fullName>
                </value>
                <value>
                    <fullName>Local Services</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Performing Arts</fullName>
                </value>
                <value>
                    <fullName>Facility</fullName>
                </value>
                <value>
                    <fullName>Nursery</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Turn Over Rent</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TOR-{00000}</displayFormat>
        <label>Turn Over Rent Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Turn Over Rents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>